add basic oauth logic

--- a/zuul-gateway-server/src/main/resources/bootstrap.properties
+++ b/zuul-gateway-server/src/main/resources/bootstrap.properties
@@ -3,3 +3,4 @@ spring.application.name=zuul-gateway-server
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 spring.profiles.active=development
+zuul.sensitiveHeaders=Cookie,Set-Cookie
